rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1248.5_2001_IN-SDF-SDF-Protocol.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1248.5_2001_IN-SDF-SDF-Protocol.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 92, column 38]
    │
    │ 
 92 │  {execute} ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 94 │  -- DISP Contracts and Packages
    │
────╯
