rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1248.6_2001_IN-SCF-SCF-Classes.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1248.6_2001_IN-SCF-SCF-Classes.asn1
---
Warnings:
LinkerError in ASN grammar: Failed to resolve reference of ElsewhereDefined: PROTECTION-MAPPING


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod in_scf_scf_classes {
    extern crate alloc;
    use super::in_common_classes::*;
    use super::in_object_identifiers::{
        COMMON_CLASSES, GULS_NOTATION, SCF_SRF_CLASSES, SSF_SCF_CLASSES,
    };
    use super::in_scf_srf_classes::*;
    use super::in_ssf_scf_classes::*;
    use super::notation::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
}
