rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1248.6_2001_IN-SCF-SCF-ops-args.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1248.6_2001_IN-SCF-SCF-ops-args.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 311, column 15]
     │
     │ 
 311 │  {notificationProvided{b1, b2}, ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 312 │               opcode-confirmedNotificationProvided}
 314 │  --Direction: controlling SCF ->supporting SCF , Timer Thinc
     │
─────╯
