rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1248.7_2001_IN-SCF-CUSF-Protocol.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1248.7_2001_IN-SCF-CUSF-Protocol.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 65, column 2]
    │
    │ 
 60 │   --defined in this Recommendation(Q.1248.7)
 62 │  -- Operation package definition
 63 │  -- activityTestPackage   OPERATION-PACKAGE
 64 │  -- This package is described in Q.1248.2.
 65 │  cusfTDPSpecificInvocationPackage{B1:b1, B2:b2} OPERATION-PACKAGE ::= ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 66 │  {
 67 │    CONSUMER INVOKES
 68 │      {activationReceivedAndAuthorized{b1, b2} | componentReceived{b1, b2} |
 69 │        associationReleaseRequested{b1, b2}}
 70 │    ID                id-package-cusfTDPSpecificInvocation
 71 │  }
    │
────╯
