rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1902.3_2001_ComponentOfISUPRemoteOperations.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1902.3_2001_ComponentOfISUPRemoteOperations.asn1
---
Warnings:
LinkerError in ASN grammar: Failed to resolve supertype ROS of parameterized implementation.


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod component_of_isupremote_operations {
    extern crate alloc;
    use super::remote_operations_generic_ros_pdus::*;
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct ISUPROSInvokeIDSet(pub InvokeId);
}
